Add flexible logging adapter, multiple and dynamic server command support, use bulkOverwrite and upgrade to JDK 17.